# my_repository

./: 4dof.db  5dof.db  benchmark.db  compare.py
2poses/: summary_statistics.csv
autocert_modules/: reachable_poses.csv  robot_parser.py  workspace_analyzer.py  workspace_dataset_20260309_080841.csv  workspace_dataset_20260309_080841_metadata.json  workspace_metrics.txt
metric_ws/: 200trials_5dof.csv  200trials_5dof_end_10.csv  200trials_6dof.csv  200trials_6dof_15.csv  200trials_6dof_20.csv  200trials_6dof_5.csv  200trials_6dof_end_10.csv  5dof_50trials.csv  6dof_50trials.csv  alphashape  benchmark_5dof_1t_pos0.1.csv  benchmark_5dof_joint.csv  benchmark_5dof_joint_20260218_054426.csv  benchmark_5dof_position_only_1trials.csv  benchmark_5dof_results.csv  benchmark_5dof_working_3trials.csv  benchmark_6dof_joint_20260218_053936.csv  benchmark_effect_sizes.csv  benchmark_fixed_3trials.csv  benchmark_joint_final_3trials.csv  benchmark_position_3t_tol0.1.csv  benchmark_position_fixed_10t.csv  benchmark_results_ik_5dof_100trials.csv  benchmark_results_ik_6dof_100trials.csv  benchmark_results_main_5dof_100trials.csv  benchmark_results_main_6dof_100trials.csv  benchmark_runner.py  benchmark_statistical_tests.csv  benchmark_summary_table.csv  generated_goals.csv  generated_goals_5DOF_200_samples01.csv  generated_goals_5dof.csv  generated_goals_6dof_200_samples.csv  goals_end.csv  joints_from_fk_poses_5dof_080847.csv  joints_from_fk_poses_5dof_081043.csv  math  omx_workspace_boundary_20260224_063402.csv  omx_workspace_boundary_20260303_075942.csv  omx_workspace_boundary_20260303_080207.csv  (+13 more)
metric_ws/40_poses/: analyis_new.py  execution_joint_commands.csv  final_test_new.py  generation_new.py  hardware_validation_metrics_20260401_061442.txt  hardware_validation_raw_data_20260401_061442.csv  omx_safe_base_poses.csv  real_robot_40_test_poses_table_top.csv
metric_ws/5dof_results/: auto.py  workspace_fk_dataset_20260312_053430.csv  workspace_fk_dataset_20260312_053430_metadata.json
metric_ws/6dof_results/: workspace_fk_dataset_20260312_055441.csv  workspace_fk_dataset_20260312_055441_metadata.json
metric_ws/all_autocert_modules/: m1_robot_parser.py  m2_sampling_fk.py  m3_workspace_metrics.py  m4_dexterity_metrics.py  m5_ik_metrics.py  m6_planning_metrics.py  m7_trajectory_metrics.py  planner_interface.py  run_benchmark.py
metric_ws/autocert_modules/: workspace_coverage_analyzer.py  workspace_sampler.py
metric_ws/benchmark_configs/: benchmark_5dof.yaml  benchmark_6dof.yaml
metric_ws/database_storage/: CMakeLists.txt
metric_ws/database_storage/src/: store.cpp  storing_joints.cpp
metric_ws/datasheet/: calc_metric_iso.py  iso_9283_test_poses.csv  iso_poses.py  iso_poses_new.py  iso_test_results.json  m1_robot_parser.py  m2_sampling_fk.py  m3_workspace_metrics.py  run_benchmark.py  run_iso_test.py
metric_ws/ieee_planning_time_results/: regression_results.csv  statistical_report.txt  summary_statistics.csv
metric_ws/install/: local_setup.sh  (+4 more)
metric_ws/src/metric_pkg/: package.xml  setup.cfg  setup.py
metric_ws/src/metric_pkg/metric_pkg/: benchmark_6dof_joint.csv  joint.py  node.py  pose_limits.py  poses_generator_new.py  results.py  time_analysis.py
workspace/: omx_results_5dof_20260305_082124.txt
(+157 files in other folders)
