<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>metric_pkg</name>
  <version>0.0.0</version>
  <description>Proving Metrics</description>
  <maintainer email="gyaramanasa01@gmail.com">Manasa</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>  
  <build_depend>moveit_msgs</build_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <build_depend>shape_msgs</build_depend>
  <exec_depend>shape_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>std_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <!-- Data analysis dependencies (system Python packages) -->
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
